tests/data/php/shouldpass/ScalarParamAnnotationWithNoComment.php
<?php
/**
 * @package Foo
 */
class Bar {
    
    /**
     * Some method
     * 
     * @param string $string
     */
    public function foo( $string ) {}
    
}
